--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,105 @@
 /스프린트미션_작업중/data
 /스프린트미션_작업중/data_5
 /스프린트미션_작업중/fonts
+/셈플
+스프린트미션_작업중/evaluation_results/evaluation_results.csv
+스프린트미션_작업중/evaluation_results/single_model_evaluation.png
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/run-e8bcx9jk.wandb
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/files/output.log
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_210949-e8bcx9jk/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/run-jn21kuy6.wandb
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/files/output.log
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_211050-jn21kuy6/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_211119-b0rsms1t/run-b0rsms1t.wandb
+스프린트미션_작업중/wandb/run-20251002_211119-b0rsms1t/files/output.log
+스프린트미션_작업중/wandb/run-20251002_211119-b0rsms1t/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_211119-b0rsms1t/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_211119-b0rsms1t/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_211119-b0rsms1t/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_211119-b0rsms1t/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_212221-1eqf1noa/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/run-ioy6rv9w.wandb
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/files/output.log
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/files/media/images/training/learning_curves_19_088f77415899e0e4878b.png
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_213023-ioy6rv9w/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_213146-g0l24b7t/run-g0l24b7t.wandb
+스프린트미션_작업중/wandb/run-20251002_213146-g0l24b7t/files/output.log
+스프린트미션_작업중/wandb/run-20251002_213146-g0l24b7t/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_213146-g0l24b7t/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_213146-g0l24b7t/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_213146-g0l24b7t/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_213146-g0l24b7t/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_213514-g7m1narb/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/run-twhocuuv.wandb
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/files/output.log
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/files/media/images/training/learning_curves_19_088f77415899e0e4878b.png
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_214056-twhocuuv/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/run-fj1inmse.wandb
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/files/output.log
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_214244-fj1inmse/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/run-67pshv2f.wandb
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/files/output.log
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/files/media/table/evaluation/LSTM_word2vec_confusion_matrix_table_1_4bc3b0a44667e27bd1d6.table.json
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/files/media/table/evaluation/model_comparison_2_2c574c04cee790781283.table.json
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_221745-67pshv2f/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/run-o58jg53i.wandb
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/files/output.log
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/files/media/table/evaluation/LSTM_word2vec_confusion_matrix_table_1_4bc3b0a44667e27bd1d6.table.json
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/files/media/table/evaluation/model_comparison_2_2c574c04cee790781283.table.json
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_222153-o58jg53i/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/run-10dfos92.wandb
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/files/output.log
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/files/media/images/training/learning_curves_19_656777e263a69d74b6ff.png
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_222306-10dfos92/logs/debug.log
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/run-e2swvwfo.wandb
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/config.yaml
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/output.log
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/requirements.txt
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/wandb-metadata.json
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/wandb-summary.json
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/media/images/evaluation/confusion_matrices_3_6312ea6679b2ba52709b.png
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/media/images/evaluation/performance_chart_3_6312ea6679b2ba52709b.png
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/media/table/evaluation/LSTM_word2vec_confusion_matrix_table_1_4b64ee1637ccd6a1defe.table.json
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/files/media/table/evaluation/model_comparison_2_59d10d84e72dfaacb7cd.table.json
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/logs/debug-internal.log
+스프린트미션_작업중/wandb/run-20251002_222450-e2swvwfo/logs/debug.log
